--- a/signup.html
+++ b/signup.html
@@ -128,6 +128,48 @@
             min-height: 20px;
         }
 
+        .password-strength {
+            margin-top: 8px;
+            margin-bottom: 8px;
+        }
+
+        .strength-bar {
+            width: 100%;
+            height: 4px;
+            background-color: #e0e0e0;
+            border-radius: 2px;
+            overflow: hidden;
+            margin-bottom: 5px;
+        }
+
+        .strength-fill {
+            height: 100%;
+            transition: width 0.3s ease, background-color 0.3s ease;
+            border-radius: 2px;
+        }
+
+        .strength-text {
+            font-size: 12px;
+            text-align: left;
+            margin-left: 2px;
+        }
+
+        .strength-weak {
+            background-color: #ff4444;
+        }
+
+        .strength-medium {
+            background-color: #ffaa00;
+        }
+
+        .strength-strong {
+            background-color: #00aa44;
+        }
+
+        .strength-very-strong {
+            background-color: #00281F;
+        }
+
         .btn-primary {
             width: 100%;
             padding: 15px;
@@ -250,6 +292,12 @@
                         </span>
                     </button>
                 </div>
+                <div class="password-strength" id="passwordStrength" style="display: none;">
+                    <div class="strength-bar">
+                        <div class="strength-fill" id="strengthFill"></div>
+                    </div>
+                    <div class="strength-text" id="strengthText">Password strength</div>
+                </div>
                 <div class="field-message" id="passwordMessage"></div>
             </div>
 
@@ -298,6 +346,75 @@
     </div>
 
     <script>
+        // Password strength checker
+        function checkPasswordStrength(password) {
+            let score = 0;
+            let feedback = [];
+
+            // Length check
+            if (password.length >= 8) score += 1;
+            else feedback.push('at least 8 characters');
+
+            // Uppercase check
+            if (/[A-Z]/.test(password)) score += 1;
+            else feedback.push('uppercase letter');
+
+            // Lowercase check
+            if (/[a-z]/.test(password)) score += 1;
+            else feedback.push('lowercase letter');
+
+            // Number check
+            if (/\d/.test(password)) score += 1;
+            else feedback.push('number');
+
+            // Special character check
+            if (/[!@#$%^&*(),.?":{}|<>]/.test(password)) score += 1;
+            else feedback.push('special character');
+
+            return { score, feedback };
+        }
+
+        function updatePasswordStrength(password) {
+            const strengthContainer = document.getElementById('passwordStrength');
+            const strengthFill = document.getElementById('strengthFill');
+            const strengthText = document.getElementById('strengthText');
+
+            if (!password) {
+                strengthContainer.style.display = 'none';
+                return;
+            }
+
+            strengthContainer.style.display = 'block';
+            const { score, feedback } = checkPasswordStrength(password);
+
+            // Update visual indicator
+            const percentage = (score / 5) * 100;
+            strengthFill.style.width = percentage + '%';
+
+            // Update colors and text
+            if (score <= 1) {
+                strengthFill.className = 'strength-fill strength-weak';
+                strengthText.textContent = 'Weak password';
+                strengthText.style.color = '#ff4444';
+            } else if (score <= 2) {
+                strengthFill.className = 'strength-fill strength-weak';
+                strengthText.textContent = 'Weak password';
+                strengthText.style.color = '#ff4444';
+            } else if (score <= 3) {
+                strengthFill.className = 'strength-fill strength-medium';
+                strengthText.textContent = 'Medium password';
+                strengthText.style.color = '#ffaa00';
+            } else if (score <= 4) {
+                strengthFill.className = 'strength-fill strength-strong';
+                strengthText.textContent = 'Strong password';
+                strengthText.style.color = '#00aa44';
+            } else {
+                strengthFill.className = 'strength-fill strength-very-strong';
+                strengthText.textContent = 'Very strong password';
+                strengthText.style.color = '#00281F';
+            }
+        }
+
         // Password toggle functionality
         function initPasswordToggle(toggleId, inputId) {
             const toggle = document.getElementById(toggleId);
@@ -333,6 +450,12 @@
         document.addEventListener('DOMContentLoaded', function() {
             initPasswordToggle('passwordToggle', 'password');
             initPasswordToggle('confirmPasswordToggle', 'confirmPassword');
+
+            // Password strength monitoring
+            const passwordInput = document.getElementById('password');
+            passwordInput.addEventListener('input', function() {
+                updatePasswordStrength(this.value);
+            });
 
             // Auto focus first input field
             document.getElementById('email').focus();
