docs: 根据当前代码更新需求文档
📝 文档更新内容:
- 添加核心功能详细说明（登录、注册、忘记密码页面）
- 更新文件结构，包含image 2.png品牌Logo
- 修正改进内容列表，添加密码规则说明和品牌Logo
- 更新交付文件列表，标注内联CSS/JS和旧版文件状态
- 完善实际效果描述，反映当前功能实现

🎯 当前功能状态:
- ✅ 密码规则说明文字（英文）
- ✅ 密码强度指示器（5级评估）
- ✅ 记住我功能
- ✅ 品牌Logo（PNG格式）
- ✅ Ant Design SVG图标
- ✅ 浏览器原生表单校验
- ✅ 响应式设计

📋 架构说明:
- 使用内联CSS/JS，无外部依赖
- 旧版styles.css和auth.js已弃用
- 所有页面自包含，便于部署

--- a/login.html
+++ b/login.html
@@ -225,13 +225,21 @@
             color: #666666;
             user-select: none;
         }
+
+        .logo-img {
+            max-width: 200px;
+            width: 100%;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <!-- Logo -->
         <div class="logo">
-            <h1>KYC</h1>
+            <img src="image 2.png" alt="KYC Logo" class="logo-img">
         </div>
 
         <!-- Header -->
