--- a/forgot-password.html
+++ b/forgot-password.html
@@ -217,13 +217,21 @@
         .link-button:hover {
             color: #3A4A1C;
         }
+
+        .logo-img {
+            max-width: 200px;
+            width: 100%;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <!-- Logo -->
         <div class="logo">
-            <h1>KYC</h1>
+            <img src="image 2.png" alt="KYC Logo" class="logo-img">
         </div>
 
         <!-- 标题 -->
